--- a/MBA/MBA/Base.lproj/Main.storyboard
+++ b/MBA/MBA/Base.lproj/Main.storyboard
@@ -10,6 +10,162 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--About UsVC-->
+        <scene sceneID="rxt-gL-hHT">
+            <objects>
+                <viewController storyboardIdentifier="AboutUsView" id="MiZ-76-kl0" customClass="AboutUsVC" customModule="MBA" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CMO-sN-Xhh"/>
+                        <viewControllerLayoutGuide type="bottom" id="KIj-8G-1DP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UKo-pP-xkY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iDK-wn-pm6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <color key="barTintColor" red="0.18823529410000001" green="0.2470588235" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="About Us" id="Acn-3z-fGB">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="RLC-jZ-M1t">
+                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <connections>
+                                                <action selector="backHome:" destination="MiZ-76-kl0" id="zx7-fp-qBG"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yk1-al-5dl">
+                                <rect key="frame" x="0.0" y="84" width="375" height="516"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qKM-ll-LAa">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="95"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Txc-5b-SIO">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="95"/>
+                                                <subviews>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="csusb_logo" translatesAutoresizingMaskIntoConstraints="NO" id="OBY-fL-X5n">
+                                                        <rect key="frame" x="88" y="0.0" width="199" height="95"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstItem="OBY-fL-X5n" firstAttribute="leading" secondItem="Txc-5b-SIO" secondAttribute="leading" constant="88" id="Plh-eN-h2P"/>
+                                                    <constraint firstAttribute="trailing" secondItem="OBY-fL-X5n" secondAttribute="trailing" constant="88" id="YSI-9O-1Yr"/>
+                                                    <constraint firstItem="OBY-fL-X5n" firstAttribute="top" secondItem="Txc-5b-SIO" secondAttribute="top" id="a3t-7D-lEi"/>
+                                                    <constraint firstAttribute="bottom" secondItem="OBY-fL-X5n" secondAttribute="bottom" id="fwK-WK-ueL"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tMs-55-fI9">
+                                        <rect key="frame" x="7.5" y="105" width="360" height="95.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UK5-jF-9wC">
+                                                <rect key="frame" x="0.0" y="0.0" width="360" height="95.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                <state key="normal" title="MBA Staff" backgroundImage="MBA Staff">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3BX-MJ-dO0">
+                                        <rect key="frame" x="7.5" y="210.5" width="360" height="95"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="drN-M8-PH9">
+                                                <rect key="frame" x="0.0" y="0.0" width="360" height="95"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                <state key="normal" title="MBA Mission" backgroundImage="MBA Mission">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hbf-Je-bF5">
+                                        <rect key="frame" x="7.5" y="315.5" width="360" height="95.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="93R-10-h74">
+                                                <rect key="frame" x="0.0" y="0.0" width="360" height="95.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                <state key="normal" title="MBA Learning Goals" backgroundImage="MBA Learning Goals">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Tjm-oK-TFF">
+                                        <rect key="frame" x="27.5" y="421" width="320" height="95"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8q1-By-u2z">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="84X-Rs-Mi9">
+                                                        <rect key="frame" x="102" y="35" width="115" height="25"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xst-BK-qb5">
+                                                                <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                                                <state key="normal" backgroundImage="facebookicon"/>
+                                                                <connections>
+                                                                    <action selector="FB:" destination="MiZ-76-kl0" eventType="touchUpInside" id="xiT-Xq-wJ1"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bo-uP-JBq">
+                                                                <rect key="frame" x="30" y="0.0" width="25" height="25"/>
+                                                                <state key="normal" backgroundImage="instagramicon"/>
+                                                                <connections>
+                                                                    <action selector="IG:" destination="MiZ-76-kl0" eventType="touchUpInside" id="pki-vq-gA8"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oHa-JS-1xF">
+                                                                <rect key="frame" x="60" y="0.0" width="25" height="25"/>
+                                                                <state key="normal" backgroundImage="linkedin"/>
+                                                                <connections>
+                                                                    <action selector="LinkedIn:" destination="MiZ-76-kl0" eventType="touchUpInside" id="N6A-Ts-JKb"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LIt-pw-6Wg">
+                                                                <rect key="frame" x="90" y="0.0" width="25" height="25"/>
+                                                                <state key="normal" backgroundImage="twittericon"/>
+                                                                <connections>
+                                                                    <action selector="Twitter:" destination="MiZ-76-kl0" eventType="touchUpInside" id="9Pq-ym-znx"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="84X-Rs-Mi9" secondAttribute="trailing" constant="103" id="OYu-Rv-pa5"/>
+                                                    <constraint firstItem="84X-Rs-Mi9" firstAttribute="leading" secondItem="8q1-By-u2z" secondAttribute="leading" constant="102" id="xIt-NY-eL3"/>
+                                                    <constraint firstItem="84X-Rs-Mi9" firstAttribute="top" secondItem="8q1-By-u2z" secondAttribute="top" constant="35" id="ysk-2j-RPz"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iDK-wn-pm6" firstAttribute="top" secondItem="CMO-sN-Xhh" secondAttribute="bottom" id="5iy-yN-ZqP"/>
+                            <constraint firstItem="KIj-8G-1DP" firstAttribute="top" secondItem="yk1-al-5dl" secondAttribute="bottom" constant="67" id="dwf-Tz-o1P"/>
+                            <constraint firstItem="yk1-al-5dl" firstAttribute="trailing" secondItem="iDK-wn-pm6" secondAttribute="trailing" id="eYK-Xf-Yc4"/>
+                            <constraint firstAttribute="trailing" secondItem="iDK-wn-pm6" secondAttribute="trailing" id="fsc-AI-XeM"/>
+                            <constraint firstItem="yk1-al-5dl" firstAttribute="leading" secondItem="iDK-wn-pm6" secondAttribute="leading" id="geG-nm-7Ph"/>
+                            <constraint firstItem="iDK-wn-pm6" firstAttribute="leading" secondItem="UKo-pP-xkY" secondAttribute="leading" id="oCs-d1-MrY"/>
+                            <constraint firstItem="yk1-al-5dl" firstAttribute="top" secondItem="iDK-wn-pm6" secondAttribute="bottom" constant="20" id="wYe-o5-W8c"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r6K-ef-Gjb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="472.80000000000001" y="-415.14242878560725"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -35,6 +191,9 @@
                                                 <state key="normal" title="MBA">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="welcomeAlert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xex-O8-KaG"/>
+                                                </connections>
                                             </button>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" style="done" id="rrf-p7-DKq">
@@ -77,6 +236,9 @@
                                                 <state key="normal" title="About Us" backgroundImage="About Us">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="aboutUsBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yd9-wh-Oy6"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cos-37-tA2">
                                                 <rect key="frame" x="166.5" y="0.0" width="156.5" height="82.5"/>
@@ -417,6 +579,9 @@ Assistanship</string>
         <image name="Calendars" width="128" height="81"/>
         <image name="Contact Us" width="128" height="81"/>
         <image name="Graduate Assistantship" width="128" height="81"/>
+        <image name="MBA Learning Goals" width="360" height="110"/>
+        <image name="MBA Mission" width="360" height="110"/>
+        <image name="MBA Staff" width="360" height="110"/>
         <image name="MyCoyote" width="128" height="81"/>
         <image name="Passport" width="128" height="81"/>
         <image name="Student Ambassadors" width="128" height="81"/>
